fixed search suggestion layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,22 @@
   }
 }
 
+.yes-scrollbar::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+.yes-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 10px;
+  background-color: #f5f5f500;
+}
+
+.yes-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #fb2c36;
+}
+
 @utility shadow {
   @layer utilities {
     box-shadow: -4px -12px 12px -2px rgba(0, 0, 0, 0.05) inset;
@@ -85,12 +101,7 @@
 
     html::-webkit-scrollbar-thumb {
       border-radius: 10px;
-      background: linear-gradient(
-        180deg,
-        rgba(193, 87, 255, 1) 0%,
-        rgba(255, 23, 79, 1) 52%,
-        rgba(255, 171, 17, 1) 100%
-      );
+      background: #fb2c36;
     }
   }
 }
